src/objects/chanceproduct__c.object
<CustomObject>
    <fields>
        <fullName>chance__c</fullName>
        <label>业务机会</label>
        <referenceTo>chance__c</referenceTo>
        <relationshipLabel>业务机会产品</relationshipLabel>
        <relationshipName>AjUn</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>需保修设备</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>业务机会产品</relationshipLabel>
        <relationshipName>sGrT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fee__c</fullName>
        <label>单价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>number__c</fullName>
        <label>数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>销售备件产品</label>
        <referenceTo>product__c</referenceTo>
        <relationshipLabel>业务机会产品</relationshipLabel>
        <relationshipName>H3Wb</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>totalfee__c</fullName>
        <formula>number__c  *  fee__c</formula>
        <label>总金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>业务机会产品</label>
    <nameField>
        <displayFormat>Y-{00000000}</displayFormat>
        <label>序号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>业务机会产品</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>